force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Enable_Sender_Signs_Only__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Enable_Sender_Signs_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to display and enable the ‘Sender Signs Only’/‘Only I sign&apos; option in the Recipients section of the send agreement page.  When the ‘Sender Signs Only’ option is used, the agreement or document is presented to only to the sender to sign.</description>
    <inlineHelpText>Enable this setting to display and enable the ‘Sender Signs Only’/‘Only I sign&apos; option in the Recipients section of the send agreement page.  When the ‘Sender Signs Only’ option is used, the agreement or document is presented to only to the sender to sign</inlineHelpText>
    <label>Enable Sender Signs Only</label>
    <type>Checkbox</type>
</CustomField>