force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Hide_Sidebar_Agreement_Page__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Hide_Sidebar_Agreement_Page__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to hide the sidebar in the Agreement Editor page. This page can be accessed by clicking on the name of an agreement displayed in the sidebar, in the Agreements Home page, or in the list of agreements for a related object.</description>
    <inlineHelpText>Enable this setting to hide the sidebar in the Agreement Editor page. This page can be accessed by clicking on the name of an agreement displayed in the sidebar, in the Agreements Home page, or in the list of agreements for a related object.</inlineHelpText>
    <label>Hide Sidebar for Agreement Editor Page</label>
    <type>Checkbox</type>
</CustomField>