force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Cc__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Cc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the &quot;Send email copies to&quot; field a read-only agreement field.</description>
    <inlineHelpText>Enable this setting to make the &quot;Send email copies to&quot; field a read-only agreement field.</inlineHelpText>
    <label>Read Only Email Copies</label>
    <type>Checkbox</type>
</CustomField>