force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the Opportunity lookup field a read-only agreement field.</description>
    <inlineHelpText>Enable this setting to make the Opportunity lookup field a read-only agreement field.</inlineHelpText>
    <label>Read Only Opportunity</label>
    <type>Checkbox</type>
</CustomField>