force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Post_Sign_Options__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Post_Sign_Options__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to display the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Post Sign Options setting.</description>
    <inlineHelpText>Enable this setting to display the ‘Post Sign Redirect URL’ and ‘Post Sign Redirect Delay’ options as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Post Sign Options setting.</inlineHelpText>
    <label>Read Only Post Sign Options</label>
    <type>Checkbox</type>
</CustomField>