force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Preview_Position__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Preview_Position__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</description>
    <inlineHelpText>Enable this setting to make the &quot;Preview document or position signature fields&quot; checkbox a read-only agreement field.</inlineHelpText>
    <label>Read Only Preview or Position</label>
    <type>Checkbox</type>
</CustomField>