force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Recipient__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Recipient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the Recipients section read-only on an agreement.</description>
    <inlineHelpText>Enable this setting to make the Recipients section read-only on an agreement.</inlineHelpText>
    <label>Read Only Recipient</label>
    <type>Checkbox</type>
</CustomField>