force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Sender_Signs_Only__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Sender_Signs_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to display the ‘Sender Signs Only’ option as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Sender Signs Only setting.</description>
    <inlineHelpText>Enable this setting to display the ‘Sender Signs Only’ option as read-only in the Recipients section of the Agreement page. This setting works in conjunction with the Enable Sender Signs Only setting.</inlineHelpText>
    <label>Read Only Sender Signs Only</label>
    <type>Checkbox</type>
</CustomField>