force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Sign_Expiration__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Sign_Expiration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</description>
    <inlineHelpText>Enable this setting to make the &quot;Allow signers X days to sign this document.&quot; a read-only agreement field.</inlineHelpText>
    <label>Read Only Sign Expiration</label>
    <type>Checkbox</type>
</CustomField>