force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Read_Only_Sign_Reminder__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Read_Only_Sign_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</description>
    <inlineHelpText>Enable this setting to make the &quot;Remind recipient to sign&quot; checkbox a read-only agreement field.</inlineHelpText>
    <label>Read Only Sign Reminder</label>
    <type>Checkbox</type>
</CustomField>