force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Show_Fields_API_Name__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Show_Fields_API_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable this option to show API Name for every field and relationship of the salesforce objects while setting data mapping and merge mapping</description>
    <inlineHelpText>Enable this option to show API Name for every field and relationship of the salesforce objects while setting data mapping and merge mapping</inlineHelpText>
    <label>Show Fields API Name</label>
    <type>Checkbox</type>
</CustomField>