force-app/main/default/objects/echosign_dev1__SIGN_Settings__c/fields/echosign_dev1__Wipe_Agreement_Password__c.field-meta.xml
<CustomField>
    <fullName>echosign_dev1__Wipe_Agreement_Password__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</description>
    <inlineHelpText>Enable this setting to wipe the encrypted password field on the agreement after it is sent.</inlineHelpText>
    <label>Wipe Agreement Password</label>
    <type>Checkbox</type>
</CustomField>